[package]
name = "whatsmyip"
version = "0.1.0"
authors = ["raf"]
description = "A rust crate to figure out your external IP address"
license = "ISC"
repository = "https://github.com/equalsraf/whatsmyip"

[dependencies]
hyper = "0.7"
log = "0.3"
env_logger = "0.3"
rand = "0.3"
ip = "1.0"
igd = "0.4"

[[bin]]
name = "whatsmyip"
doc = false
